# 3dsnes

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COMPATIBILITY.md  README.md  analyze_results.sh  test_all_roms.sh
ext/glad/include/KHR/: khrplatform.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/3dsnes/: camera.h  fxaa.h  lua_scripting.h  menu.h  ppu_extract.h  profile_manager.h  renderer.h  soft_renderer.h  voxelizer.h
profiles/: super_marioworld_a0da.json  super_marioworld_a0da.lua  the_legend_of_zelda_af0d.json  the_legend_of_zelda_af0d.lua  zelda_alttp.json
src/: camera.c  fxaa.c  lua_scripting.c  main.c  menu.cpp  ppu_extract.c  profile_manager.c  renderer.c  soft_renderer.c  test_emu.c  voxelizer.c
